# vlmparse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  README_BENCH.md  config.yaml  new_version.sh  pyproject.toml  uv_publish.md
.github/workflows/: publish.yml  test.yml  type-check.yml
docker/: Dockerfile  build_docker_image.sh  connect_to_docker.sh  root_connect.sh  run_docker.sh
docker_pipelines/dotsocr/: build_docker_image.sh  entrypoint.sh  run_docker.sh
docker_pipelines/glmocr/: .env.example  Dockerfile  compose.yaml  config.yaml
docker_pipelines/glmocr-vlmparse/: layout_server.py
docker_pipelines/paddleocrvl/: compose.yaml  vlm.Dockerfile
scripts/: bench_all_models.py
scripts/generation_scripts/: generate_filled_forms_with_masks.py  generate_handwriting_tests.py  generate_multi_column_tests.py  generate_table_tests.py  generate_tiny_text_tests.py
tests/: conftest.py  test_all_converters_mocked.py  test_batch_parser.py  test_benchmark_tests.py  test_cli.py  test_end2end.py  test_page_selection.py  test_process_and_run_benchmark.py  test_server_logic.py  test_table_tests.py  test_uri_annotator.py
vlmparse/: base_model.py  build_doc.py  cli.py  converter.py  converter_with_server.py  create_dataset.py  docling_extractor.py  model_endpoint_config.py  page_processor.py  page_processor_base.py  registries.py  run_benchmark.py  uri_annotator.py  utils.py
vlmparse/bench_tests/: benchmark_tsts.py
vlmparse/benchpdf2md/: create_dataset.py  run_benchmark.py
vlmparse/clients/: anthropic_converter.py  box_vlm_converter.py  chandra.py  (+23 more)
(+36 files in other folders)
